--- a/drawings.kibot.yaml
+++ b/drawings.kibot.yaml
@@ -18,9 +18,9 @@ outputs:
       format: jpg
       output: front-drawn.jpg
       style:
-        board: "#018e85"
-        copper: "#4e9a74"
-        pads: "#8d99af"
+        board: "#018461"
+        copper: "#758e5c"
+        pads: "#6f5b3a"
 
   - name: 'drawb'
     comment: "Drawings to compare the original back side against"
@@ -32,21 +32,7 @@ outputs:
       output: back-drawn.jpg
       show_components: all
       style:
-        board: "#0f2b2c"
-        copper: "#0f351e"
-        pads: "#bdc1c7"
+        board: "#018461"
+        copper: "#758e5c"
+        pads: "#6f5b3a"
       placeholder: true
-
-  - name: 'drawbs'
-    comment: "Drawings to compare the original sanded back side against"
-    type: pcbdraw
-    dir: drawings
-    options:
-      bottom: true
-      format: jpg
-      output: back-sand-drawn.jpg
-      show_components: none
-      style:
-        board: "#2d635d"
-        copper: "#fad2c6"
-        pads: "#c8ced1"
